--- a/src-tauri/Info.plist
+++ b/src-tauri/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppSleepDisabled</key>
+	<true/>
 	<key>NSScreenCaptureUsageDescription</key>
 	<string>This app needs access to capture your screen for time tracking purposes.</string>
 	<key>NSAccessibilityUsageDescription</key>
