--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -32,7 +32,10 @@ commands.allow = [
   "listen_activity",
   "request_screenshot_permission",
   "take_screenshot",
+  "take_screenshot_to_temp",
   "upload_screenshot",
+  "upload_screenshot_from_path",
+  "delete_screenshot_temp_file",
   "enqueue_time_entry",
   "show_notification",
   "update_tray_time",
